fix: Fix alignment discrepency between section and page TOC items

--- a/mkdocs_torillic/css/torillic.css
+++ b/mkdocs_torillic/css/torillic.css
@@ -9,6 +9,10 @@ li.torillic-contents-section::marker {
     content: ">";
     font-weight: bold;
 }
+li.torillic-contents-page::marker {
+    content: "-";
+    font-weight: bold;
+}
 
 .torillic-background {
     padding: 4rem;
